# hasty-hamiltonian

./: .gitignore  .travis.yml  CHANGELOG  README.md  hasty-hamiltonian.cabal  stack.yaml
Examples/: Example.hs  Rosenbrock_HMC.hs  SPDE_HMC.hs
Examples/code/: Rosenbrock_HMC.hs  SPDE_HMC.hs
Numeric/MCMC/: Hamiltonian.hs
Numeric/Sampling/: Hamiltonian.hs
test/: Beale.hs  Booth.hs  Rosenbrock.hs
