name:                hasty-hamiltonian
version:             0.2.0.0
synopsis:            Speedy traversal through parameter space.
homepage:            http://jtobin.github.com/hasty-hamiltonian
license:             BSD3
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
category:            Numeric
build-type:          Simple
cabal-version:       >=1.10
Description:

    Speedy gradient-based traversal through parameter space.

Source-repository head
  Type:     git
  Location: http://github.com/jtobin/hasty-hamiltonian.git

library
  default-language: Haskell2010
  exposed-modules:
    Numeric.MCMC.Hamiltonian
  build-depends:
      base         >= 4.7.0.1 && < 5
    , mtl          >= 2.2.1
    , mwc-random   >= 0.13.2.0
    , primitive    >= 0.5.3.0
    , transformers >= 0.4.1.0
    , vector       >= 0.10.11.0
  ghc-options:
    -Wall

Test-Suite hasty-examples
  type:                exitcode-stdio-1.0
  hs-source-dirs:      examples
  main-is:             Example.hs
  default-language:    Haskell2010
  ghc-options:
    -threaded -rtsopts -Wall -O2
  build-depends:
      ad                >= 4.2.1
    , base              >= 4.7.0.1 && < 5
    , hasty-hamiltonian >= 0.2.0.0
    , mwc-random        >= 0.13.2.0
    , vector            >= 0.10.11.0

