name:                hasty-hamiltonian
version:             0.3.0.0
synopsis:            Speedy traversal through parameter space.
homepage:            http://jtobin.github.com/hasty-hamiltonian
license:             BSD3
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
category:            Numeric
build-type:          Simple
cabal-version:       >=1.18
Description:

    Speedy gradient-based traversal through parameter space.

Source-repository head
  Type:     git
  Location: http://github.com/jtobin/hasty-hamiltonian.git

library
  default-language: Haskell2010
  exposed-modules:
    Numeric.Sampling.Hamiltonian
  build-depends:
      base
    , mtl
    , mcmc-types
    , mwc-random
    , primitive
    , transformers
    , vector
  ghc-options:
    -Wall

Test-Suite hasty-examples
  type:                exitcode-stdio-1.0
  hs-source-dirs:      examples
  main-is:             Example.hs
  default-language:    Haskell2010
  ghc-options:
    -threaded -rtsopts -Wall -O2
  build-depends:
      ad
    , base
    , hasty-hamiltonian
    , mwc-random        >= 0.13.2.0
    , vector

